--- a/examineV3/package.json
+++ b/examineV3/package.json
@@ -13,6 +13,7 @@
     "@metamask/sdk": "^0.34.0",
     "@tonconnect/ui": "^2.4.1",
     "@types/howler": "^2.2.12",
+    "@vercel/analytics": "^1.6.1",
     "clsx": "2.1.1",
     "ethers": "^6.16.0",
     "framer-motion": "^12.34.3",
