--- a/examineV3/package.json
+++ b/examineV3/package.json
@@ -11,18 +11,36 @@
   },
   "dependencies": {
     "@metamask/sdk": "^0.34.0",
+    "@phosphor-icons/react": "^2.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "@tonconnect/ui": "^2.4.1",
     "@types/howler": "^2.2.12",
     "@vercel/analytics": "^1.6.1",
-    "clsx": "2.1.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "cobe": "^0.6.5",
     "ethers": "^6.16.0",
     "framer-motion": "^12.34.3",
     "howler": "^2.2.4",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.575.0",
+    "motion": "^12.34.3",
     "pixi.js": "^8.6.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "3.4.0"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.1.17",
