--- a/examineV3/package.json
+++ b/examineV3/package.json
@@ -22,7 +22,9 @@
     "pixi.js": "^8.6.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@tailwindcss/vite": "4.1.17",
@@ -33,6 +35,7 @@
     "tailwindcss": "4.1.17",
     "typescript": "5.9.3",
     "vite": "7.2.4",
-    "vite-plugin-singlefile": "2.3.0"
+    "vite-plugin-singlefile": "2.3.0",
+    "@tailwindcss/postcss": "^4.0.0"
   }
 }
