--- a/examineV3/package.json
+++ b/examineV3/package.json
@@ -14,6 +14,7 @@
     "@tonconnect/ui": "^2.4.1",
     "@types/howler": "^2.2.12",
     "@vercel/analytics": "^1.6.1",
+    "autoprefixer": "^10.4.27",
     "clsx": "2.1.1",
     "ethers": "^6.16.0",
     "framer-motion": "^12.34.3",
@@ -27,15 +28,16 @@
     "vaul": "^1.1.2"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/vite": "4.1.17",
     "@types/node": "^22.0.0",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react": "5.1.1",
+    "autoprefixer": "^10.4.0",
     "tailwindcss": "4.1.17",
     "typescript": "5.9.3",
     "vite": "7.2.4",
-    "vite-plugin-singlefile": "2.3.0",
-    "@tailwindcss/postcss": "^4.0.0"
+    "vite-plugin-singlefile": "2.3.0"
   }
 }
